Don't resolve dependencies within the project with go-offline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           key: enterprise-beers-{{ .Branch }}-{{ checksum "pom.xml" }}
       - run:
           name: Prepare build
-          command: mvn dependency:go-offline
+          command: mvn dependency:go-offline -DexcludeGroupIds=com.infosupport.enterprise-beers
       - save_cache:
           paths:
             - ~/.m2
