--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,6 @@
                                 <goal>build</goal>
                             </goals>
                         </execution>
-                        <execution>
-                            <id>push-container</id>
-                            <phase>deploy</phase>
-                            <goals>
-                                <goal>push</goal>
-                            </goals>
-                        </execution>
                     </executions>
                 </plugin>
             </plugins>
@@ -104,6 +97,23 @@
             <properties>
                 <dockerfile.tag>${env.CIRCLE_BUILD_NUM}</dockerfile.tag>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>push-container</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>push</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
