--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,26 +42,18 @@ jobs:
       - store_test_results:
           path: ~/junit
       - run:
-          name: Prepare connection to Azure Container Registry
-          command: |
-            cat << EOF > $HOME/.m2/settings.xml
-            <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
-                  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                  xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
-              <servers>
-                 <server>
-                    <id>enterprisebeers.azurecr.io</id>
-                    <username>$AZ_SP_ID</username>
-                    <password>$AZ_SP_PASSWORD</password>
-                 </server>
-              </servers>
-            </settings>
-            EOF
+          name: Login to Azure Container Registry
+          command: az acr login -n enterprisebeers -u $AZ_SP_ID -p $AZ_SP_PASSWORD
       - run:
-          name: Push containers
+          name: Push OpenLiberty container
           command: |
             mvn clean package \
               -Pdocker,circleci \
-              -Ddockerfile.tag=1.0.${CIRCLE_BUILD_NUM} \
-              -Ddockerfile.username=${AZ_SP_ID} \
-              -Ddockerfile.password=${AZ_SP_PASSWORD}
+              -pl openliberty-java11-docker
+      - run:
+          name: Push application containers
+          command: |
+            mvn clean package \
+              -Pdocker,circleci \
+              -el openliberty-java11-docker \
+              -Ddockerfile.tag=1.0.${CIRCLE_BUILD_NUM}
