--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,5 +55,5 @@ jobs:
           command: |
             mvn clean package \
               -Pdocker,circleci \
-              -el openliberty-java11-docker \
+              -pl \!openliberty-java11-docker \
               -Ddockerfile.tag=1.0.${CIRCLE_BUILD_NUM}
