--- a/brewery-api/pom.xml
+++ b/brewery-api/pom.xml
@@ -56,6 +56,7 @@
                             <buildArgs>
                                 <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                             </buildArgs>
+                            <repository>enterprisebeers.azurecr.io/brewery-api</repository>
                         </configuration>
                     </plugin>
                 </plugins>
