Rename Dockerfile argument

--- a/brewery-api/Dockerfile
+++ b/brewery-api/Dockerfile
@@ -1,3 +1,5 @@
 FROM enterprisebeers.azurecr.io/openliberty-java11:javaee8-19.0.0.1
 
-ARG JAR_FILE
+ARG WAR_FILE
+
+COPY target/${WAR_FILE} /config/dropins/brewery.war
