Deploy app to context root of Liberty

--- a/brewery-api/Dockerfile
+++ b/brewery-api/Dockerfile
@@ -2,4 +2,5 @@ FROM enterprisebeers.azurecr.io/openliberty-java11:javaee8-19.0.0.1
 
 ARG WAR_FILE
 
-COPY target/${WAR_FILE} /config/dropins/brewery.war
+COPY src/main/docker/app.xml /config/configDropins/defaults/app.xml
+COPY target/${WAR_FILE} /tmp/app.war
