Use correct registry name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,8 +63,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Login to Azure Container Registry
-          command: |
-            docker login futbolin.azurecr.io -u $AZ_SP_ID -p $AZ_SP_PASSWORD
+          command: docker login enterprisebeers.azurecr.io -u $AZ_SP_ID -p $AZ_SP_PASSWORD
       - run:
           name: Build container
           command: |
