--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "carbon-components": "^9.82.10",
+    "carbon-components-react": "^6.99.1",
+    "carbon-icons": "^7.0.7",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
