--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "carbon-components": "^9.82.10",
-    "carbon-components-react": "^6.99.1",
-    "carbon-icons": "^7.0.7",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "bootstrap": "4.3.1",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "2.1.5",
+    "reactstrap": "7.1.0"
+  },
+  "devDependencies": {
+    "@types/react-dom": "16.8.2",
+    "@types/reactstrap": "7.1.3",
+    "@types/react-router": "4.4.4",
+    "@types/react-router-dom": "4.3.1",
+    "typescript": "3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
