--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -7,20 +7,29 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.5",
     "reactstrap": "7.1.0"
   },
   "devDependencies": {
+    "@types/enzyme": "3.9.0",
+    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/jest": "24.0.9",
     "@types/react-dom": "16.8.2",
-    "@types/reactstrap": "7.1.3",
     "@types/react-router": "4.4.4",
     "@types/react-router-dom": "4.3.1",
+    "@types/reactstrap": "7.1.3",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.10.0",
+    "jest-enzyme": "7.0.1",
+    "jest-junit": "6.3.0",
+    "react-scripts": "2.1.5",
+    "react-test-renderer": "16.8.3",
     "typescript": "3.3.3333"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "react-scripts test --env=jsdom --reporters=default --reporters=jest-junit --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
