Setup frontend app for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,18 @@ jobs:
           name: Login to Azure Container Registry
           command: docker login enterprisebeers.azurecr.io -u $AZ_SP_ID -p $AZ_SP_PASSWORD
       - run:
+          name: Install dependencies
+          command: yarn install
+      - run:
+          name: Run tests
+          command: JEST_JUNIT_OUTPUT=test-reports/junit.xml yarn run test:ci
+      - run:
           name: Build container
           command: |
             pushd frontend
             ./build-container.sh $CIRCLE_BUILD_NUM
+      - store_test_results:
+          path: "./test-reports/"
+      - store_artifacts:
+          destination: "test-reports/unit-test"
+          path: "./test-reports/"
