--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
                 <version>3.2.1</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.mockrunner</groupId>
+                <artifactId>mockrunner-servlet</artifactId>
+                <version>1.1.2</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
