Enable role-based auth on resources

--- a/demo-2.yml
+++ b/demo-2.yml
@@ -7,18 +7,24 @@ services:
   beer-api:
     image: enterprisebeers.azurecr.io/beer-api:1.0.75
     container_name: beer-api
+    volumes:
+      - ./demo-2-config.txt:/config/jvm.options
     networks:
       - enterprise-beers
 
   brewery-api-1:
     image: enterprisebeers.azurecr.io/brewery-api:1.0.75
     container_name: brewery-api-1
+    volumes:
+      - ./demo-2-config.txt:/config/jvm.options
     networks:
       - enterprise-beers
 
   brewery-api-2:
     image: enterprisebeers.azurecr.io/brewery-api:1.0.75
     container_name: brewery-api-2
+    volumes:
+      - ./demo-2-config.txt:/config/jvm.options
     networks:
       - enterprise-beers
 
