Demo 3 builds upon Demo 2

--- a/demo-2.yml
+++ b/demo-2.yml
@@ -36,7 +36,7 @@ services:
     networks:
       - demo02
     volumes:
-      - ./demo2-pgdata:/var/lib/postgresql/data
+      - ./pg-data:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: kong
       POSTGRES_USER: kong
